--- a/style.css
+++ b/style.css
@@ -146,6 +146,23 @@ h2 {
 	opacity: 0.7;
 }
 
+/*scrollbar*/
+::-webkit-scrollbar {
+	width: 5px;
+}
+
+::-webkit-scrollbar-track {
+	background: white;
+}
+
+::-webkit-scrollbar-thumb {
+	background: #03abab;
+}
+
+::-webkit-scrollbar-thumb:hover {
+	background: #68aaaa;
+}
+
 @media only screen and (max-width: 768px) {
 	.section-container {
 		width: 70vw;
@@ -188,22 +205,5 @@ h2 {
 	h2 {
 		padding: 50px;
 		font-size: 40px;
-	}
-
-	/*scrollbar*/
-	::-webkit-scrollbar {
-		width: 5px;
-	}
-
-	::-webkit-scrollbar-track {
-		background: white;
-	}
-
-	::-webkit-scrollbar-thumb {
-		background: lightgray;
-	}
-
-	::-webkit-scrollbar-thumb:hover {
-		background: #03abab;
 	}
 }
