--- a/style.css
+++ b/style.css
@@ -225,6 +225,9 @@ h2 {
 }
 
 @media only screen and (max-width: 768px) {
+	nav ul {
+		background-color: #030303;
+	}
 	.section-container {
 		width: 70vw;
 	}
