--- a/style.css
+++ b/style.css
@@ -46,13 +46,14 @@ header {
 }
 
 h1:hover {
-	text-shadow: 2px 2px 10px #03abab;
+	text-shadow: 2px 2px 15px #03abab;
 }
 
 h1 {
 	font-family: "Bulgatti", sans-serif;
 	font-size: 150px;
 	color: #03abab;
+	transition: 1s;
 }
 
 .section-container {
