--- a/style.css
+++ b/style.css
@@ -193,22 +193,6 @@ h2 {
 	color: #03abab;
 }
 
-.cursor {
-	position: fixed;
-	width: 50px;
-	height: 50px;
-	border: 3px solid #fea680;
-	background-color: #fea680;
-	border-radius: 50%;
-	left: -30px;
-	top: -30px;
-	pointer-events: none;
-	transform: translate(-50%, -50%);
-	transition: width 1s, height 1s, background-color 1s;
-	z-index: +20;
-	opacity: 0.6;
-}
-
 /*scrollbar*/
 ::-webkit-scrollbar {
 	width: 5px;
@@ -224,6 +208,24 @@ h2 {
 
 ::-webkit-scrollbar-thumb:hover {
 	background: #68aaaa;
+}
+
+@media only screen and (min-width: 900px) {
+	.cursor {
+		position: fixed;
+		width: 50px;
+		height: 50px;
+		border: 3px solid #fea680;
+		background-color: #fea680;
+		border-radius: 50%;
+		left: -30px;
+		top: -30px;
+		pointer-events: none;
+		transform: translate(-50%, -50%);
+		transition: width 1s, height 1s, background-color 1s;
+		z-index: +20;
+		opacity: 0.6;
+	}
 }
 
 @media only screen and (max-width: 768px) {
